# space-invaders

./: .gitignore  CMakeLists.txt
cmake/: FetchSFML.cmake  TargetSources.cmake
docs/: gameDesignDoc.md
docs/umlDocs/: .$RapidRecharge-ClassDiagram.drawio.bkp  RapidRecharge-ClassDiagram.drawio  RapidRecharge-GameDesign-Diagram.drawio
docs/umlDocs/class_diagrams/: Menu_Manager.drawio
docs/umlDocs/stateMachines/: .$00-rapidRecharge-mainLoop.drawio.bkp  00-rapidRecharge-mainLoop.drawio  01-rapidRecharge-loadPlayerInputType.drawio
include/core/: gameManager.hpp  game_manager.hpp  menu_controller.hpp  menu_manager.hpp  scene_manger.hpp  windowManger.hpp
include/interface/: I_scene.hpp
include/menu/: i_menu.hpp  i_menu_switcher.hpp  i_switch_menu.hpp  main_menu.hpp  settings_menu.hpp
include/utils/: logger.hpp
src/: CMakeLists.txt  logger.cpp  logger.hpp  main.cpp  player.cpp  player.hpp  target.cpp  target.hpp
src/collectables/: target.cpp
src/core/: gameManager.cpp  game_manager.cpp  menu_controller.cpp  menu_manager.cpp  scene_manager.cpp  windowManager.cpp
src/menu/: main_menu.cpp  settings_menu.cpp
src/player/: player.cpp
src/utils/: logger.cpp
